Fixed issue where page would zoom on mobile when inputting user and pw. Also, on log in, the user will be taken to the top of the page they are landing.

--- a/src/components/LogInForm/LogInForm.css
+++ b/src/components/LogInForm/LogInForm.css
@@ -1,13 +1,21 @@
 .loginButton {
-  margin: 1vmin;
+  margin: 2vmin 1vmin;
   padding: 1vmin;
-  font-size: 2vmin;
+  font-size: 16px;
   font-weight: bold;
   text-decoration: none;
   text-align: center;
   border: 0.1vmin solid rgb(240, 240, 240, 0.8);
   border-radius: 0.5vmin;
   outline: none;
+}
+
+input,
+label {
+  font-size: 16px;
+}
+label {
+  padding: 2vmin;
 }
 
 .loginButton:enabled {
@@ -17,10 +25,4 @@
 
 .box-container {
   padding: 2vmin;
-}
-
-@media (width <= 600px) {
-  .box-container {
-    width: 75%;
-  }
 }
