--- a/src/components/SignUpForm/SignUpForm.css
+++ b/src/components/SignUpForm/SignUpForm.css
@@ -1,20 +1,28 @@
 .signUpButton {
-    margin: 1vmin;
-    padding: 1vmin;
-    font-size: 2vmin;
-    font-weight: bold;
-    text-decoration: none;
-    text-align: center;
-    border: .1vmin solid rgb(240,240,240,0.8);
-    border-radius: .5vmin;
-    outline: none;
+  margin: 2vmin 1vmin;
+  padding: 1vmin;
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+  text-align: center;
+  border: 0.1vmin solid rgb(240, 240, 240, 0.8);
+  border-radius: 0.5vmin;
+  outline: none;
 }
 
 .signUpButton:enabled {
-    background-color: white;
-    color: black
+  background-color: white;
+  color: black;
 }
 
 label {
-    color: white;
+  color: white;
+}
+
+input {
+  font-size: 16px;
+}
+
+.box-container {
+  padding: 0 2vmin;
 }
